# rare_disease_benchmark

./: AUDIT.md  HOW-TO.md  LICENSE  METHODOLOGY.md  PRE-FLIGHT.md  README.md  config.py  download_data.py  estimate_cost.py  eval_condition.py  generate_charts.py  hpo_mcp_server.py  metrics.py  plugin_smoke_test.py  pyproject.toml  run_cd59_trace.py  run_condition.py  run_injected.py
.claude/rules/: security-posture.md
.claude/skills/ux-review/: SKILL.md
docs/: cd59_trace.json  cd59_trace.md  design.md  mcp-integrations.md  plugin_smoke_test.json  plugin_smoke_test_report.md  research.md
plugin/rare-disease-consult/: .mcp.json  README.md
plugin/rare-disease-consult/.claude-plugin/: plugin.json
plugin/rare-disease-consult/server/: hpo_server.py  pyproject.toml
plugin/rare-disease-consult/skills/consult/: SKILL.md
